[labs.fp.o] Initial implementation of the Python-classroom GA page

--- a/labs.fedoraproject.org/static/css/app.css
+++ b/labs.fedoraproject.org/static/css/app.css
@@ -460,6 +460,7 @@ margin-top:4px;
 #head .copr-design { background:url(../images/design/design-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-games { background:url(../images/games/games-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-jam { background:url(../images/jam/jam-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
+#head .copr-python-classroom { background:url(../images/python-classroom/python-classroom-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-robotics { background:url(../images/robotics/robotics-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-security { background:url(../images/security/security-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-scientific { background:url(../images/scientific/scientific-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
