--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -115,3 +115,40 @@ hr
 {
   padding-top: 1em;
 }
+
+/* calendar for schedule area */
+.calendar th,
+.calendar td {
+  border-collapse: collapse;
+  border: 1px solid black;
+}
+
+.calendar tr.flock td { 
+   border-bottom: 1px solid white;
+}
+.calendar tr.flock td.flock { 
+   border-bottom: 1px solid black; 
+   background-color: #3c6eb4;
+   color: white;
+   font-weight: 700;
+}
+.calendar tr + tr + tr td {
+  padding: 2px 12px;
+}
+.calendar tr + tr + tr td.flock {
+  background-color: #cceaec;
+}
+.calendar span {
+  font-size: x-large;
+  font-weight: 700;
+  display: block;
+  margin-top: -.3em;
+}
+.calendar th { 
+  text-align: center; 
+  background-color: #c2c2c2;
+  color: white;
+  font-weight: 700;
+
+}
+.calendar { text-transform: uppercase; }
