--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -30,7 +30,7 @@
             <li><a href="#venue"> ${_('Venue')}</a></li>
             <li><a href="#events"> ${_('Events')}</a></li>
             <li><a href="#sponsors"> ${_('Sponsors')}</a></li>
-            <li><a href="#photos"> ${_('Photos')}</a></li>
+            <!-- fixme <li><a href="#photos"> ${_('Photos')}</a></li> -->
           </ul>
         </div>
       </div>
