adjusting text-align

--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -46,6 +46,10 @@ body{
   padding: 10px 15px;
 }
 
+#comms, #transport, #venue {
+  text-align: left;
+}
+
 .flock-info-item {
   text-align: center;
 }
