--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -49,6 +49,10 @@ body{
 #comms, #transport, #venue {
   text-align: left;
 }
+#telegram {
+  padding-top: 2em;
+  text-align: center;
+}
 
 .flock-info-item {
   text-align: center;
