--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -23,7 +23,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav nav-pills navbar-right">
-	          <li><a href="#welcome">${_('Welcome')}</a></li>
+	    <li><a href="#welcome">${_('Welcome')}</a></li>
+            <li><a href="http://register.flocktofedora.org"> ${_('Register')}</a></li>
             <li><a href="#schedule"> ${_('Schedule')}</a></li>
             <li><a href="#comms"> ${_('Social')}</a></li>
             <li><a href="#transport"> ${_('Transport')}</a></li>
