#636 WIP for the new LXQt spin page

--- a/spins.fedoraproject.org/data/templates/lxqt/header.html
+++ b/spins.fedoraproject.org/data/templates/lxqt/header.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row product-header">
         <div class="col-xs-6 text-left">
-        <a href="${path}/${lang}/lxde/"><img class="productlogo hidden-xs" src="${path}/static/images/lxqt-banner.png" alt="Fedora LXQT Desktop" /><img class="productlogo visible-xs" src="${path}/static/images/lxqt.png" alt="Fedora LXQT Desktop" /></a>
+        <a href="${path}/${lang}/lxqt/"><img class="productlogo hidden-xs" src="${path}/static/images/lxqt-banner.png" alt="Fedora LXQt Desktop" /><img class="productlogo visible-xs" src="${path}/static/images/lxqt.png" alt="Fedora LXQt Desktop" /></a>
         </div>
         <div class="col-xs-6 text-right">
         <a href="${path}/${lang}/"><img class="fedoralogotext" src="${path}/static/images/spins.png" alt="Spins Text" /></a>
