--- a/labs.fedoraproject.org/data/templates/python-classroom/supportresources.html
+++ b/labs.fedoraproject.org/data/templates/python-classroom/supportresources.html
@@ -16,15 +16,15 @@
         <div class="row top-margin">
           <div class="col-md-4 col-xs-12 text-center">
             <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-            <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#FIXME&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-robotics'))}</p>
+            <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-python&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-python'))}</p>
           </div>
           <div class="col-md-4 col-xs-12 text-center">
             <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-            <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;FIXME@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/robotics'))}</p>
+            <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;python-devel@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/python-devel'))}</p>
           </div>
           <div class="col-md-4 col-xs-12 text-center">
             <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-            <p>${Markup(_('Specific documentation is available at the &lt;a href="%s"&gt;FIXME wiki page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/FIXME'))}</p>
+            <p>${Markup(_('Specific documentation is available at the &lt;a href="%s"&gt;Fedora Developer page&lt;/a&gt;.') % ('https://developer.fedoraproject.org/tech/languages/python/python-installation.html'))}</p>
           </div>
         </div>
         <div class="row top-margin">
