full po update for getfedora.org

--- a/getfedora.org/data/templates/moretofedora.html
+++ b/getfedora.org/data/templates/moretofedora.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row intro">
         <div class="col-md-12">
-          <h3 class="thin">${Markup(_('There\'s more to &lt;img class="inlinelogo" src="%s" alt="Fedora Logo"&gt;') % ('../../static/images/fedora-logotext.png'))}</h3>
+          <h3 class="thin">${Markup(_('There\'s more to &lt;img class="inlinelogo" src="../../static/images/fedora-logotext.png" alt="Fedora Logo"&gt;'))}</h3>
         </div>
       </div>
     </div>
