remove border bottom in the news banner

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -301,6 +301,14 @@ margin-top:4px;
   color: rgba(255,255,255,0.7);
 }
 
+.newsbox a.news,
+.newsbox a.news,
+.newsbox a.news {
+  text-decoration: none;
+  border: none;
+}
+
+
 .product-box {
   position: relative;
   margin-left: auto;
