fix labs resource string to make it translatable

--- a/labs.fedoraproject.org/data/templates/python-classroom/supportresources.html
+++ b/labs.fedoraproject.org/data/templates/python-classroom/supportresources.html
@@ -30,7 +30,7 @@
         <div class="row top-margin">
           <div class="col-xs-12 text-center">
             <h4><i class="fa fa-fw header-icon fa-question-circle"></i>${_('General Help Using Fedora')}</h4>
-            <p>${Markup(_('Sometimes you may encounter an issue with this spin that you can get help with using general Fedora support resources. A list of resources is available at the &lt;a href="%s"&gt;Fedora &ldquo;Get Help&rdquo; page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Communicating_and_getting_help'))}</p>
+            <p>${Markup(_('Sometimes you may encounter an issue with this spin that you can get help with using general Fedora support resources. A list of resources is available at the &lt;a href="%s"&gt;Fedora &lt;strong&gt;Get Help&lt;/strong&gt; page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Communicating_and_getting_help'))}</p>
           </div>
         </div>
       </div>
