fix: Show all spaces in fingerprints

--- a/getfedora.org/data/templates/keys/key-button-and-modal.html
+++ b/getfedora.org/data/templates/keys/key-button-and-modal.html
@@ -52,7 +52,7 @@
                     </tr>
                     <tr>
                       <td>${_('Fingerprint')}</td>
-                      <td><code>${key.fingerprint}</code></td>
+                      <td><code class="fingerprint">${key.fingerprint}</code></td>
                     </tr>
                     <py:for each="uid in key.uids">
                       <tr>
