--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -1152,6 +1152,7 @@ ul.list-spaces li{ margin-bottom:10px; }
 .uppercase {text-transform: uppercase;}
 .liveusb {}
 .pull-right {margin-left: 10px;}
+.fingerprint {white-space: pre;}
 
 img { max-width:100%; }
 img.pull-right { margin-left: 10px; }
