correct min-height issue in RTL language (Persian/Arabic)

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -712,7 +712,7 @@ text-align:center;
   text-align: center;
   padding-top: 2em;
   padding-bottom: 5em;
-  min-height: 290px;
+  min-height: 290px !important;
 }
 
 .productitem img {
