discalimer for 32bit images and remove them also for alt.fpo

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -928,7 +928,7 @@ p.warning {
     background: #4c4c4c no-repeat 10px center;
     margin-bottom: 2.5em;
     font-size: 110%;
-    display: none;
+    font-weight: normal;
     text-align: justify;
 }
 
