add pull-left to style

--- a/getfedora.org/data/templates/cloud/header.html
+++ b/getfedora.org/data/templates/cloud/header.html
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div class="row product-header">
-        <div class="col-xs-6 text-left">
+        <div class="col-xs-6 text-left pull-left">
         <a href="${path}/${lang}/atomic/"><img class="productlogo hidden-xs" src="${path}/static/images/atomic-head-logo.png" alt="Fedora Atomic" /><img class="productlogo hidden-sm hidden-md hidden-lg" src="${path}/static/images/smalllogo-color-atomic.png" alt="Fedora Atomic" /></a>
         </div>
         <div class="col-xs-6 text-right">
