--- a/getfedora.org/data/templates/head.html
+++ b/getfedora.org/data/templates/head.html
@@ -8,7 +8,7 @@
 <!-- Main Header -->
   <div class="container">
     <div class="row product-header">
-      <div class="col-xs-6 text-left">
+      <div class="col-xs-6 text-left pull-left">
        <a href="${path}/${lang}/"><img class="fedoralogo" src="${path}/static/images/fedora_infinity_140x140.png" alt="Fedora Logo" /></a>
       </div>
       <div class="col-xs-6 text-right">
