--- a/getfedora.org/data/templates/workstation/header.html
+++ b/getfedora.org/data/templates/workstation/header.html
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div class="row product-header">
-        <div class="col-xs-6 text-left">
+        <div class="col-xs-6 text-left pull-left">
         <a href="${path}/${lang}/workstation/"><img class="productlogo hidden-xs" src="${path}/static/images/workstation-logo.png" alt="Fedora Workstation" /><img class="productlogo hidden-sm hidden-md hidden-lg" src="${path}/static/images/smalllogo-color-workstation.png" alt="Fedora Workstation" /></a>
         </div>
         <div class="col-xs-6 text-right">
