group ARM verify page, fix buttons and fix Python Classroom section to make it also responsive

--- a/arm.fedoraproject.org/static/css/app.css
+++ b/arm.fedoraproject.org/static/css/app.css
@@ -77,6 +77,10 @@ background-color:white;
   width: 200px;
 }
 
+.btn-fix-verify {
+  width: 250px;
+}
+
 a.btn-lg {
   font-size: 22px;
   font-weight: 700 !important;
