drop 32 bit images and verify links for spins.fpo

--- a/spins.fedoraproject.org/data/templates/generic/splash-checksum.html
+++ b/spins.fedoraproject.org/data/templates/generic/splash-checksum.html
@@ -11,9 +11,10 @@
             <div class="col-sm-4 col-xs-12">
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Validate 64bit!')}</a>
             </div>
-            <div class="col-sm-4 col-xs-12">
+<!--            <div class="col-sm-4 col-xs-12">
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('Validate 32bit!')}</a>
             </div>
+-->
           </div>
 
 </html>
