define server variables for dynamic checksums

--- a/getfedora.org/data/templates/js.html
+++ b/getfedora.org/data/templates/js.html
@@ -5,8 +5,10 @@
   py:strip="">
     <script>
         var curr_id = ${global_variables.release['curr_id']};
+        var curr_server_id = ${global_variables.release['curr_server_id']};
         var curr_atomic_id = ${global_variables.release['curr_atomic_id']};
         var RC_gold = ${global_variables.release['RC_gold']};
+        var RC_server_gold = ${global_variables.release['RC_server_gold']};
         var composedate = ${global_variables.release['composedate']};
         var atomic_composedate = ${global_variables.release['atomic_composedate']};
     </script>
