fix doc links on getfedora and make them dynamic with variables

--- a/getfedora.org/data/templates/footer.html
+++ b/getfedora.org/data/templates/footer.html
@@ -57,7 +57,7 @@
                                 <dd><a href="//ask.fedoraproject.org/">${_('Ask Fedora')}</a></dd>
                                 <dd><a href="//fedoraproject.org/wiki/Common_F${global_variables.release['curr_id']}_bugs">${_('Common Bugs')}</a></dd>
                                 <dd><a href="//developer.fedoraproject.org/">${_('Fedora Developer Portal')}</a></dd>
-                                <dd><a href="//docs.fedoraproject.org/f26/install-guide/Book_Info.html#">${_('Installation Guide')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/f${global_variables.release['curr_id']}/install-guide/Book_Info.html#">${_('Installation Guide')}</a></dd>
                             </dl>
                         </div>
                     </div>
