fix docs links in all footers and templates

--- a/labs.fedoraproject.org/data/templates/generic/docs-links.html
+++ b/labs.fedoraproject.org/data/templates/generic/docs-links.html
@@ -6,7 +6,7 @@
   py:strip="">
 
 	<h3>${_('Documentation and other resources')}</h3>
-	<p>${Markup(_('Before installing Fedora, you may want to confirm your system meets minimum requirements for Fedora. Consult &lt;a href="%(release_notes)s"&gt;the online release notes&lt;/a&gt; to see minimum requirements and recommendations.') % {'release_notes': 'https://docs.fedoraproject.org/f%s/release-notes/index.html#' % (global_variables.release['curr_id'])})}</p>
-	<p>${Markup(_('There is also a &lt;a href="%(install_guide)s"&gt;complete Installation Guide&lt;/a&gt; available. We recommend you look through it before installing to your system, since it answers many common questions.') % {'install_guide': 'https://docs.fedoraproject.org/f%s/install-guide/Book_Info.html#' % (global_variables.release['curr_id'])})}</p>
+	<p>${Markup(_('Before installing Fedora, you may want to confirm your system meets minimum requirements for Fedora. Consult &lt;a href="%(release_notes)s"&gt;the online release notes&lt;/a&gt; to see minimum requirements and recommendations.') % {'release_notes': 'https://docs.fedoraproject.org/f%s/release-notes/' % (global_variables.release['curr_id'])})}</p>
+	<p>${Markup(_('There is also a &lt;a href="%(install_guide)s"&gt;complete Installation Guide&lt;/a&gt; available. We recommend you look through it before installing to your system, since it answers many common questions.') % {'install_guide': 'https://docs.fedoraproject.org/f%s/install-guide/' % (global_variables.release['curr_id'])})}</p>
 
 </html>
