Fix mixed-content on bfo, thanks phuzion
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/boot.fedoraproject.org/data/templates/js.html
+++ b/boot.fedoraproject.org/data/templates/js.html
@@ -3,5 +3,5 @@
   xmlns:py="http://genshi.edgewall.org/"
   xmlns:xi="http://www.w3.org/2001/XInclude"
   py:strip="">
-  <script type="text/javascript" src="http://fedoraproject.org/static/js/banner.js"></script>
+  <script type="text/javascript" src="https://fedoraproject.org/static/js/banner.js"></script>
 </html>
