Update "About Fedora" link in getfedora.org/data/templates/footer.html
The "About Fedora" link in the footer goes to a page in wiki that say "This document has moved." and suggests a link.

This patch updates the link to use the suggestion, taking the user directly there.

Seems to be the only affected wiki link in the footer.

Untested; not sure if it affects other sites.

--- a/getfedora.org/data/templates/footer.html
+++ b/getfedora.org/data/templates/footer.html
@@ -14,7 +14,7 @@
                         <h3 class="widget-title">${_('About')}</h3>
                         <div class="widget-body">
                             <dl>
-                                <dd><a href="//fedoraproject.org/wiki/Overview">${_('About Fedora')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/fedora-project/project/fedora-overview.html">${_('About Fedora')}</a></dd>
                                 <dd><a href="${path}/${lang}/sponsors">${_('Sponsors')}</a></dd>
                                 <dd><a href="//fedoramagazine.org">${_('Fedora Magazine')}</a></dd>
                                 <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
