Added 'Code of Conduct' link in getfedora.org footer
This commit closes #775

--- a/getfedora.org/data/templates/footer.html
+++ b/getfedora.org/data/templates/footer.html
@@ -18,6 +18,7 @@
                                 <dd><a href="${path}/${lang}/sponsors">${_('Sponsors')}</a></dd>
                                 <dd><a href="//fedoramagazine.org">${_('Fedora Magazine')}</a></dd>
                                 <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/fedora-project/project/code-of-conduct.html">${_('Fedora Code of Conduct')}</a></dd> 
                             </dl>
                             <ul class="list-inline">
                             <li>
