Added 'Code of Couduct' link in various websites footer
arm, alt, spins, labs, and flocktofedora

--- a/arm.fedoraproject.org/data/templates/footer.html
+++ b/arm.fedoraproject.org/data/templates/footer.html
@@ -17,7 +17,8 @@
                                 <dd><a href="//fedoraproject.org/wiki/Overview">${_('About Fedora')}</a></dd>
                                 <dd><a href="//getfedora.org/${lang}/sponsors">${_('Sponsors')}</a></dd>
                                 <dd><a href="//fedoramagazine.org">${_('Fedora Magazine')}</a></dd>
-				<dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
+                                <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/fedora-project/project/code-of-conduct.html">${_('Fedora Code of Conduct')}</a></dd>
                             </dl>
                             <ul class="list-inline">
                             <li>
