Added 'Code of Conduct' link in start.fedoraproject.org footer

--- a/start.fedoraproject.org/data/templates/footer.html
+++ b/start.fedoraproject.org/data/templates/footer.html
@@ -23,6 +23,7 @@
         <li class="left"><a href="https://fedoraproject.org/wiki/Legal:Trademark_guidelines">${Markup(_('Trademark Guidelines'))}</a></li>
         <li class="left"><a href="https://fedoraproject.org/wiki/Legal:Licenses?rd=Legal/Licenses#This_Website">${Markup(_('Content License'))}</a></li>
         <li class="left"><a href="https://getfedora.org/sponsors">${Markup(_('Sponsors'))}</a></li>
+        <li class="left"><a href="https://docs.fedoraproject.org/fedora-project/project/code-of-conduct.html">${Markup(_('Fedora Code of Conduct'))}</a></li>
       </ul>
       </div>
     </footer>
