Update Font Awesome 4.7.0

--- a/alt.fedoraproject.org/data/templates/css.html
+++ b/alt.fedoraproject.org/data/templates/css.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="${path}/static/css/app.css" />
     <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin,latin-ext" />
     <link rel='stylesheet' media="screen" href='https://fonts.googleapis.com/css?family=Montserrat' />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="${path}/static/css/font-awesome.css" />
 
     <!-- language selector -->
     <link rel="stylesheet" type="text/css" href="${path}/static/css/jquery.uls.css" />
