Initial commit for Flock 2018

--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -24,14 +24,14 @@
         <div class="collapse navbar-collapse">
           <ul class="nav nav-pills navbar-right">
 	    <li><a href="#welcome">${_('Welcome')}</a></li>
-            <li><a href="http://register.flocktofedora.org"> ${_('Register')}</a></li>
+<!--            <li><a href="http://register.flocktofedora.org"> ${_('Register')}</a></li> -->
             <li><a href="#schedule"> ${_('Schedule')}</a></li>
-            <li><a href="#comms"> ${_('Social')}</a></li>
-            <li><a href="#transport"> ${_('Transport')}</a></li>
+                <li><a href="#comms"> ${_('Social')}</a></li>
+<!--            <li><a href="#transport"> ${_('Transport')}</a></li> -->
             <li><a href="#venue"> ${_('Venue')}</a></li>
-            <li><a href="#events"> ${_('Events')}</a></li>
+<!--            <li><a href="#events"> ${_('Events')}</a></li> -->
             <li><a href="#sponsors"> ${_('Sponsors')}</a></li>
-            <!-- fixme <li><a href="#photos"> ${_('Photos')}</a></li> -->
+<!-- fixme <li><a href="#photos"> ${_('Photos')}</a></li> -->
           </ul>
         </div>
       </div>
