--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -4,7 +4,7 @@ body{
 }
 
 #welcome2 {
-  background-image: url('/static/images/capecod-landscape.png');
+//  background-image: url('/static/images/capecod-landscape.png');
   background-position: center bottom;
   background-repeat: no-repeat;
   padding-bottom: 15em !important;
