--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -24,8 +24,10 @@
         <div class="collapse navbar-collapse">
           <ul class="nav nav-pills navbar-right">
 	    <li><a href="#welcome">${_('Welcome')}</a></li>
-<!--            <li><a href="http://register.flocktofedora.org"> ${_('Register')}</a></li> -->
+	    <li><a href="#about">${_('About')}</a></li>
             <li><a href="#schedule"> ${_('Schedule')}</a></li>
+            <li><a href="#cfp"> ${_('CfP')}</a></li>
+            <li><a href="#register"> ${_('Register')}</a></li>
                 <li><a href="#comms"> ${_('Social')}</a></li>
 <!--            <li><a href="#transport"> ${_('Transport')}</a></li> -->
             <li><a href="#venue"> ${_('Venue')}</a></li>
