[getfedora.org] rework the atomic downloads page

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -157,7 +157,7 @@ background-color:white;
 .btn-cloud:active { background: #7C6ADD; }
 
 .btn-checksum {
-  width: 200px;
+  width: 250px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1039,7 +1039,6 @@ margin-top:20px;
 }
 
 #cloud .download-container .btn {
-  margin-top: 1em;
 }
 
 #cloud .download-container h2.cloudy {
@@ -1312,3 +1311,19 @@ img.pull-left { margin-right: 10px; }
 
 /* Utility classes */
 .hidden { display: none; }
+
+.mb-0{
+  margin-bottom:0;
+}
+
+.mt-1{
+  margin-top:1em;
+}
+
+.bg-light{
+  background: #f6f6f6;
+}
+
+.download-cloud-sm.download-cloud{
+  padding:0.5em 1em;
+}
