--- a/getfedora.org/data/templates/generic/other-media-sources.html
+++ b/getfedora.org/data/templates/generic/other-media-sources.html
@@ -6,7 +6,7 @@
   py:strip="">
 
   <h3>${_('Other ways of obtaining media')}</h3>
-  <p>${Markup(_('You may purchase installation media for Fedora from &lt;a href="%s"&gt;online vendors&lt;/a&gt; or a &lt;a href="%s"&gt;local vendor&lt;/a&gt; in your area.') % ('http://fedoraproject.org/wiki/Distribution/OnlineVendors', 'http://fedoraproject.org/wiki/Distribution/LocalVendors'))}</p>
-  <p>${Markup(_('Can\'t afford the price of installation media? Request Fedora installation media from the &lt;a href="%s"&gt;Fedora Free Media Program&lt;/a&gt;.') % ('http://fedoraproject.org/freemedia/FreeMedia-form.html'))}</p>
+  <!-- TODO: Should we omit this section altogether? -->
+  <p>${Markup(_('You may purchase installation media for Fedora from &lt;a href="%s"&gt;online vendors&lt;/a&gt; or a &lt;a href="%s"&gt;local vendor&lt;/a&gt; in your area.') % ('https://fedoraproject.org/wiki/Distribution/OnlineVendors', 'https://fedoraproject.org/wiki/Distribution/LocalVendors'))}</p>
 
 </html>
