Update Fedora Docs links, fix Google+ URL

--- a/getfedora.org/data/templates/footer.html
+++ b/getfedora.org/data/templates/footer.html
@@ -14,18 +14,18 @@
                         <h3 class="widget-title">${_('About')}</h3>
                         <div class="widget-body">
                             <dl>
-                                <dd><a href="//docs.fedoraproject.org/fedora-project/project/fedora-overview.html">${_('About Fedora')}</a></dd>
+                                <dd><a href="https://docs.fedoraproject.org/en-US/project/">${_('About Fedora')}</a></dd>
                                 <dd><a href="${path}/${lang}/sponsors">${_('Sponsors')}</a></dd>
                                 <dd><a href="//fedoramagazine.org">${_('Fedora Magazine')}</a></dd>
                                 <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
-                                <dd><a href="//docs.fedoraproject.org/fedora-project/project/code-of-conduct.html">${_('Fedora Code of Conduct')}</a></dd> 
+                                <dd><a href="https://docs.fedoraproject.org/en-US/project/code-of-conduct/">${_('Fedora Code of Conduct')}</a></dd> 
                             </dl>
                             <ul class="list-inline">
                             <li>
                                 <a href="https://www.facebook.com/TheFedoraProject" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://plus.google.com/112917221531140868607" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://plus.google.com/+Fedora" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/fedora" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
@@ -80,7 +80,7 @@
                 <div class="row">
                     <div class="col-md-2">
                         <div class="widget-body">
-                            <a href="http://www.redhat.com/"><img class="rh-logo" src="${path}/static/images/sponsors/sidebar/redhat.png" alt="Red Hat Logo" /></a>
+                            <a href="https://www.redhat.com/"><img class="rh-logo" src="${path}/static/images/sponsors/sidebar/redhat.png" alt="Red Hat Logo" /></a>
                         </div>
                     </div>
                     <div class="col-md-7">
