chore: Make all docs site linkts https

--- a/fedoracommunity.org/data/templates/footer.html
+++ b/fedoracommunity.org/data/templates/footer.html
@@ -10,7 +10,7 @@
                 <dd><a href="http://fedoraproject.org/wiki/Overview">${_('About Fedora')}</a></dd>
                 <dd><a href="http://fedoraplanet.org/">${_('Planet Fedora')}</a></dd>
                 <dd><a href="//fedoramagazine.org">${_('Fedora Magazine')}</a></dd>
-                <dd><a href="http://docs.fedoraproject.org/">${_('Documentation')}</a></dd>
+                <dd><a href="https://docs.fedoraproject.org/">${_('Documentation')}</a></dd>
                 <dd><a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki">${_('Fedora Wiki')}</a></dd>
                 <dd><a href="http://fedoraproject.org/wiki/FedoraEvents">${_('Events')}</a></dd>
             </dl>
@@ -34,7 +34,7 @@
                 <dd><a href="irc://irc.freenode.org/#fedora">${_('IRC Help')}</a></dd>
                 <dd><a href="https://admin.fedoraproject.org/mailman/listinfo/users">${_('Mailing List Help')}</a></dd>
                 <dd><a href="http://ask.fedoraproject.org/">${_('Ask Fedora')}</a></dd>
-                <dd><a href="http://docs.fedoraproject.org/">${_('Documentation')}</a></dd>
+                <dd><a href="https://docs.fedoraproject.org/">${_('Documentation')}</a></dd>
             </dl>
         </div>
         <div class="grid_3 sitelinks">
