--- a/getfedora.org/data/templates/footer.html
+++ b/getfedora.org/data/templates/footer.html
@@ -14,11 +14,11 @@
                         <h3 class="widget-title">${_('About')}</h3>
                         <div class="widget-body">
                             <dl>
-                                <dd><a href="https://docs.fedoraproject.org/en-US/project/">${_('About Fedora')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/en-US/project/">${_('About Fedora')}</a></dd>
                                 <dd><a href="${path}/${lang}/sponsors">${_('Sponsors')}</a></dd>
                                 <dd><a href="//fedoramagazine.org">${_('Fedora Magazine')}</a></dd>
-                                <dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
-                                <dd><a href="https://docs.fedoraproject.org/en-US/project/code-of-conduct/">${_('Fedora Code of Conduct')}</a></dd> 
+                                <dd><a href="//fedoraproject.org/wiki/Legal:Main#Legal">${_('Legal')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/en-US/project/code-of-conduct/">${_('Fedora Code of Conduct')}</a></dd> 
                             </dl>
                             <ul class="list-inline">
                             <li>
