Clear the way for Flock Budapest 2019

--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -8,7 +8,8 @@ body {
 }
 
 .bg {
-  background: #1a3c6d url('https://i.imgur.com/XGOrohP.png') no-repeat center center;
+  background: #1a3c6d url('https://i.imgur.com/xpHWnKT.jpg') no-repeat;
+  background-position: 50% 28%;
   width: 100%;
   height: 350px; /*same height as jumbotron */
   top:0;
