--- a/start.fedoraproject.org/data/templates/head.html
+++ b/start.fedoraproject.org/data/templates/head.html
@@ -12,7 +12,7 @@
        <a href="${path}/${lang}/"><img class="fedoralogo" src="${path}/static/images/fedora-logo.png" alt="Fedora Logo" /></a>
       </div>
       <div class="col-xs-6 text-right">
-        <a href="https://www.redhat.com/">${_('A Red Hat-Sponsored Community Project')}&nbsp;&nbsp;<img src="${path}/static/images/sponsors/redhat-community.png" alt="" /></a>
+        <a href="https://www.redhat.com/">${_('A Red Hat-Sponsored Community Project')}&nbsp;&nbsp;&nbsp;<img src="${path}/static/images/sponsors/redhat-community.png" alt="" /></a>
       </div>
     </div>
   </div>
