Prep websites for f30 launch
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/labs.fedoraproject.org/data/templates/generic/splash-checksum-unofficial.html
+++ b/labs.fedoraproject.org/data/templates/generic/splash-checksum-unofficial.html
@@ -9,12 +9,13 @@
     	<p>${Markup(_('Once you have downloaded an image, verify it for security and integrity. To verify your image, start by downloading the proper CHECKSUM file into the same directory as the image you downloaded and follow &lt;a href="/%s/verify"&gt;these instructions&lt;/a&gt;.') % (lang))}</p>
           <div class="row bottom-margin">
             <div class="col-sm-4 col-xs-12">
-              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-UNOFFICIAL-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Verify 64bit!')}</a>
+		    <!--<a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-UNOFFICIAL-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Verify 64bit!')}</a>-->
+		    <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-UNOFFICIAL-30-20190427.0-x86_64-CHECKSUM">${_('Verify 64bit!')}</a>
             </div>
-<!--            <div class="col-sm-4 col-xs-12">
+            <div class="col-sm-4 col-xs-12">
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('Verify 32bit!')}</a>
             </div>
--->
+
           </div>
 
 </html>
