--- a/labs.fedoraproject.org/data/templates/generic/unofficial.html
+++ b/labs.fedoraproject.org/data/templates/generic/unofficial.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-md-12 text-center">
 	    <!--<p class="warning">${Markup(_('Although this spin failed to compose for the final release, this test compose contains fixes over the final content to allow for a successful compose and should meet most users\' needs. You can verify the test compose image with a dedicated CHECKSUM file for &lt;a href="%(x86_64)s"&gt;64-bit&lt;/a&gt; and &lt;a href="%(i386)s"&gt;32-bit&lt;/a&gt; images.') % {'x86_64':global_variables.path['unofficial'] + '/' + global_variables.release['curr_id'] + '/x86_64/Fedora-UNOFFICIAL-' + global_variables.release['curr_id']  + '-' + global_variables.release['unofficial_compose'] + '.1-x86_64-CHECKSUM', 'i386':global_variables.path['unofficial'] + '/' + global_variables.release['curr_id'] + '/i386/Fedora-UNOFFICIAL-' + global_variables.release['curr_id']  + '-' + global_variables.release['unofficial_compose'] + '.1-i386-CHECKSUM'})}-->
-      <p class="warning">${Markup(_('Although this spin failed to compose for the final release, this test compose contains fixes over the final content to allow for a successful compose and should meet most users\' needs. You can verify the test compose image with a dedicated CHECKSUM file for 64-bit and 32-bit images.'))}
+      <p class="warning">${Markup(_('Although this spin failed to compose for the final release, this test compose contains fixes over the final content to allow for a successful compose and should meet most users\' needs. You can verify the test compose image with a dedicated CHECKSUM file for 64-bit images.'))}
       </p>
     </div>
   </div>
