Minor content issues with flocktofedora.org Removed extra 'm' at the end of the 'Communicate the Fedora Strategy' Updated 'Get Fedora Atomic' to 'Get Fedora Silverblue' and corrosponding link Updated 'Installation Guide' link for Fedora 30

--- a/flocktofedora.org/data/templates/footer.html
+++ b/flocktofedora.org/data/templates/footer.html
@@ -40,7 +40,7 @@
                           <dl>
                             <dd><a href="//getfedora.org/${lang}/workstation/download">${_('Get Fedora Workstation')}</a></dd>
                             <dd><a href="//getfedora.org/${lang}/server/download">${_('Get Fedora Server')}</a></dd>
-                            <dd><a href="//getfedora.org/${lang}/atomic/download">${_('Get Fedora Atomic')}</a></dd>
+                            <dd><a href="//silverblue.fedoraproject.org/download">${_('Get Fedora Silverblue')}</a></dd>
                             <dd><a href="//spins.fedoraproject.org">${_('Fedora Spins')}</a></dd>
                             <dd><a href="//labs.fedoraproject.org">${_('Fedora Labs')}</a></dd>
                             <dd><a href="//arm.fedoraproject.org">${Markup(_('Fedora ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt;'))}</a></dd>
@@ -58,7 +58,7 @@
                                 <dd><a href="//ask.fedoraproject.org/">${_('Ask Fedora')}</a></dd>
                                 <dd><a href="//fedoraproject.org/wiki/Common_F${global_variables.release['curr_id']}_bugs">${_('Common Bugs')}</a></dd>
                                 <dd><a href="//developer.fedoraproject.org/">${_('Fedora Developer Portal')}</a></dd>
-                                <dd><a href="//docs.fedoraproject.org/en-US/fedora/f29/install-guide/">${_('Installation Guide')}</a></dd>
+                                <dd><a href="//docs.fedoraproject.org/en-US/fedora/f31/install-guide/">${_('Installation Guide')}</a></dd>
                             </dl>
                         </div>
                     </div>
